# flat-narrow

./: Cargo.toml  README.md  progs
src/: booleans.json  equality.json  factorial.json  find_subterm.rs  flat_narrow_experiment.rs  main.rs  narrow.rs  resolution.rs  rewrite.rs  simple_narrowing.rs  simplest_unif.rs  solve.rs  solve1.rs  solve2.rs  solve_one_loop.rs  temp.json  term.rs
src/flat_narrow/: clause.rs  cpoint.rs  env.rs  goal.rs  json.rs  mod.rs  pattern.rs  term.rs
src/flat_narrow/parser/: mod.rs
src/quoted/: mod.rs
