[package]
name = "limi-prolog-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
disjoint-sets = "0.4.2"

# cargo run --bin fnarrow
[[bin]]
name = "fnarrow"
test = false
bench = false
path = "src/flat_narrow/mod.rs"